--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,4 @@ env:
 install:
     -mkdir build
     -cd build
-    -cmake .. -DCMAKE_BUILD_TYPE=$BUILD_CONFIGURATION -DTARGET_CPU=$TARGET_CPU
-    -cmake --build
+    -cmake .. -DCMAKE_BUILD_TYPE=$BUILD_CONFIGURATION -DTARGET_CPU=$TARGET_CPU && make
